# k8

./: README.md
Cert/: cluster-issuer-example.yaml  install.ps1  install.sh
Database/Postgres/: external_name.yaml  install.ps1  install.sh  values.yaml
Grafana/: install.ps1  install.sh  values.yaml
Keda/: default.values.yaml  install.ps1  install.sh
KinD/: cluster.yaml  kind.cluster.yaml
Metrics/: install.ps1  install.sh
OpenTelemetry/Distributions/Seq/Docker/: run.ps1
OpenTelemetry/Distributions/Seq/Docker/Data/: Seq.json
OpenTelemetry/Distributions/Seq/Docker/Data/Documents/: metastore.2.metadata  metastore.collection.e73430069b9f4125aaa3e28ef903c68b.docc
OpenTelemetry/Distributions/Seq/Docker/Data/Stream/: stream.2.metadata
OpenTelemetry/ExampleApplications/: README.md
OpenTelemetry/ExampleApplications/python/hello/: pyproject.toml
OpenTelemetry/ExampleApplications/python/hello/app/: main.py
OpenTelemetry/ExampleApplications/python/instrumented/: README.md  pyproject.toml
OpenTelemetry/ExampleApplications/python/instrumented/app/: client.py  main.py  server.py
OpenTelemetry/ExampleApplications/python/zero_instrumentation/: README.md  pyproject.toml
OpenTelemetry/ExampleApplications/python/zero_instrumentation/app/: main.py
OpenTelemetry/Operator/: default.values.yaml  install.ps1  install.sh  values.yaml
_docs/: KUBERNETES_FLAVORS.md
_docs/app/: Metrics.md
_docs/essential/: CERTMANAGER.md  METRICS.md
_docs/interesting/: KEDA.md
_docs/must_have/: GRAFANA.md  KEDA.md  OTEL.md
_docs/must_have/OTEL/: COLLECTORS.md  OPERATOR.md  TARGET_ALLOCATORS.md
