[project]
name = "hello"
version = "0.1.0"
description = "FastAPI project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.114.1",
    "opentelemetry-distro>=0.48b0",
    "opentelemetry-exporter-otlp>=1.27.0",
    "opentelemetry-instrumentation-asgi>=0.48b0",
    "opentelemetry-instrumentation-asyncio>=0.48b0",
    "opentelemetry-instrumentation-dbapi>=0.48b0",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "opentelemetry-instrumentation-grpc>=0.48b0",
    "opentelemetry-instrumentation-httpx>=0.48b0",
    "opentelemetry-instrumentation-jinja2>=0.48b0",
    "opentelemetry-instrumentation-logging>=0.48b0",
    "opentelemetry-instrumentation-requests>=0.48b0",
    "opentelemetry-instrumentation-sqlite3>=0.48b0",
    "opentelemetry-instrumentation-threading>=0.48b0",
    "opentelemetry-instrumentation-tortoiseorm>=0.48b0",
    "opentelemetry-instrumentation-urllib>=0.48b0",
    "opentelemetry-instrumentation-urllib3>=0.48b0",
    "opentelemetry-instrumentation-wsgi>=0.48b0",
    "opentelemetry-util-http>=0.48b0",
    "pip>=24.2",
]
